address removing replication wal entries